# qubit

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  lint.sh  sample.cpp
examples/: CMakeLists.txt  bernstein_vazirani.cpp  grover.cpp  qft.cpp  shor.cpp
include/: qubit.hpp  qubit_algorithms.hpp  qubit_exceptions.hpp  qubit_gates.hpp
include/qubit/: qubit.hpp
include/qubit/algorithms/: fourier.hpp  search.hpp  shor.hpp
include/qubit/gates/: multi_qubit.hpp  one_qubit.hpp
scripts/: lint.sh
src/: multi_qubit_gates.cpp  one_qubit_gates.cpp  qubit.cpp  qubit_Bernstein_Vazirani.cpp  qubit_Grover.cpp  qubit_QFT.cpp  qubit_Shor.cpp  qubit_operator.cpp  qubit_qft.cpp
src/algorithms/: bernstein_vazirani.cpp  grover.cpp  qft.cpp  shor.cpp
src/gates/: multi_qubit.cpp  one_qubit.cpp
tests/: CMakeLists.txt  one_qubit_test_main.cpp  test_algorithms.cpp  test_framework.hpp  test_helpers.hpp  test_memory_safety.cpp  test_multi_qubit_gates.cpp  test_one_qubit_gates.cpp
